--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     </div>
 
     <div id="gallery" class="w-full max-w-4xl grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <!-- 画像はここに動的に追加されます -->
-    </div>
+        </div>
 
     <div id="message" class="mt-8 text-center text-gray-500 font-semibold hidden"></div>
 
@@ -35,6 +34,7 @@
             const keywordInput = document.getElementById('keyword');
             const gallery = document.getElementById('gallery');
             const messageDiv = document.getElementById('message');
+            let controller;
 
             searchForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
@@ -47,8 +47,15 @@
                 gallery.innerHTML = '';
                 showMessage('検索中...', false);
 
+                // 以前のリクエストをキャンセル
+                if (controller) {
+                    controller.abort();
+                }
+                controller = new AbortController();
+                const signal = controller.signal;
+
                 try {
-                    const response = await fetch(`https://api.lolicon.app/setu/v2?r18=1&num=20&keyword=${encodeURIComponent(keyword)}`);
+                    const response = await fetch(`https://api.lolicon.app/setu/v2?r18=1&num=20&keyword=${encodeURIComponent(keyword)}`;
                     if (!response.ok) {
                         throw new Error(`HTTP error! status: ${response.status}`);
                     }
@@ -77,8 +84,13 @@
                         showMessage('画像が見つかりませんでした。', true);
                     }
                 } catch (error) {
-                    console.error('Error fetching data:', error);
-                    showMessage('画像の取得中にエラーが発生しました。', true);
+                    if (error.name === 'AbortError') {
+                        // リクエストがキャンセルされた場合は何もしない
+                        console.log('Fetch aborted');
+                    } else {
+                        console.error('Error fetching data:', error);
+                        showMessage('画像の取得中にエラーが発生しました。', true);
+                    }
                 }
             });
 
